# assistente-inteligente

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCUMENTACAO.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
aiadapter/agents/: agent_manager.py  base_agent.py  simple_agent.py
aiadapter/api/: main.py
aiadapter/application/: ai_service.py  audio_service.py  provider_health.py
aiadapter/config/: settings.py
aiadapter/core/entities/: aiprovidermedata.py  airequest.py  airesponse.py  audiorequest.py  audioresponse.py
aiadapter/core/enums/: aicapability.py
aiadapter/core/interfaces/: cache.py  factory_provider.py  observability.py  policy.py  provider.py  rate_limiter.py  route.py  router.py  stt_provider.py  tool.py  tts_provider.py
aiadapter/factory/: abstract_factory.py  factory_provider.py
aiadapter/infrastructure/governance/: cost_router.py  daily_quota_manager.py  logger_observability.py  simple_cache.py  simple_policy.py  simple_rate_limiter.py
aiadapter/infrastructure/providers/anthropic/: antropic_provider.py  calude_provider.py
aiadapter/infrastructure/providers/deepseek/: deepseek_provider.py
aiadapter/infrastructure/providers/google/: gemini_provider.py
aiadapter/infrastructure/providers/groq/: groq_provider.py
aiadapter/infrastructure/providers/local/: local_provider.py  ollama_provider.py
aiadapter/infrastructure/providers/mistral/: mistral_provider.py
aiadapter/infrastructure/providers/openai/: openai_provider.py
aiadapter/infrastructure/providers/openrouter/: openrouter_provider.py
aiadapter/infrastructure/providers/stt/: groq_stt_provider.py  openai_stt_provider.py  whisper_local_provider.py
aiadapter/infrastructure/providers/tts/: edge_tts_provider.py  elevenlabs_provider.py  openai_tts_provider.py  pyttsx3_provider.py
aiadapter/infrastructure/routing/: cost_router.py
aiadapter/infrastructure/system/: hardware_analyzer.py  microphone_capture.py
aiadapter/interfaces/: aiprovidermedata.py  airequest.py  provider.py
tests/: conftest.py
tests/integration/: test_ollama_integration.py
tests/unit/: test_ai_service.py  test_audio_entities.py  test_audio_service.py  test_audio_service_fallback.py  test_cache.py  test_cost_router.py  test_entities.py  test_hardware_analyzer.py  test_observability.py  test_policy.py  test_quota_manager.py  test_rate_limiter.py  test_stt_providers.py  test_tts_providers.py
