[project]
name = "assistente-inteligente"
version = "2.0.0"
description = "Gateway multi-provider de IA com seleção inteligente por custo, dificuldade e hardware"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.26.0"]
gemini = [
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
]
groq = ["groq>=0.9.0"]
mistral = ["mistralai>=1.0.0"]
voice-local = [
    "faster-whisper>=1.0.0",
    "pyttsx3>=2.90",
]
voice-remote = [
    "edge-tts>=6.1.0",
    "elevenlabs>=1.0.0",
]
voice-mic = [
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
]
voice-all = [
    "faster-whisper>=1.0.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "elevenlabs>=1.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.26.0",
    "google-genai>=1.0.0",
    "groq>=0.9.0",
    "mistralai>=1.0.0",
    "psutil>=5.9.0",
    "faster-whisper>=1.0.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "elevenlabs>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiadapter*"]

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=aiadapter",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "integration: testes que requerem serviços externos (Ollama, APIs)",
    "slow: testes lentos (>2s)",
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["aiadapter", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (black cuida disso)
    "B008",   # do not perform function calls in default arguments
    "N805",   # first argument of a method should be named 'self'
]

[tool.ruff.lint.isort]
known-first-party = ["aiadapter"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]
